k8sgpt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8sgpt-operator-system
  labels:
    name: k8sgpt-operator-system
